fix text alignment for skinny screens

--- a/assets/css/resume.css
+++ b/assets/css/resume.css
@@ -7,6 +7,10 @@
   color: black;
 }
 
+.left-block p {
+  text-align:left;
+}
+
 h1, h2, h3 {
   color: black;
 }
